--- a/ParteIIAngular/src/app/dashboard/dashboard.component.html
+++ b/ParteIIAngular/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,8 @@
 <p>
-  dashboard works!
+  dashboard works! dfsdf
+  <li *ngFor="let user of users$">
+    <ul>
+      <li>{{user.email}}</li>
+    </ul>
+  </li>
 </p>
