config mi branch, add ttulo

--- a/ParteIIAngular/src/app/app.component.html
+++ b/ParteIIAngular/src/app/app.component.html
@@ -3,7 +3,7 @@
 
      <mat-toolbar>
        <mat-icon (click)="drawer.toggle()">reorder</mat-icon>
-       
+       Family Tracking 2
      </mat-toolbar>
 
     <mat-drawer-container style="height:2000px;" class="example-container" autosize>
@@ -13,7 +13,7 @@
           <strong routerLink="/dashboard">Grafico 1</strong>
         </li>
         <li>
-            <strong>Item 2 sdasdsadasdasdasd</strong>
+            <strong>Item 2 </strong>
         </li>
         
 
